# Framecut

./: .gitignore  LICENSE  NOTICE  README.md  index.html  launch-framecut.bat  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/fc-captions/: Cargo.toml
src-tauri/crates/fc-captions/src/: lib.rs
src-tauri/crates/fc-effects/: Cargo.toml
src-tauri/crates/fc-effects/src/: lib.rs
src-tauri/crates/fc-export/: Cargo.toml
src-tauri/crates/fc-export/src/: lib.rs
src-tauri/crates/fc-ffmpeg/: Cargo.toml
src-tauri/crates/fc-ffmpeg/src/: lib.rs
src-tauri/crates/fc-media/: Cargo.toml
src-tauri/crates/fc-media/src/: lib.rs
src-tauri/crates/fc-preview/: Cargo.toml
src-tauri/crates/fc-preview/src/: lib.rs
src-tauri/crates/fc-project/: Cargo.toml
src-tauri/crates/fc-project/src/: lib.rs
src-tauri/crates/fc-timeline/: Cargo.toml
src-tauri/crates/fc-timeline/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: commands.ts
src/components/export/: ExportDialog.tsx
src/components/help/: HelpDialog.tsx
src/components/inspector/: InspectorPanel.tsx
src/components/left-panel/: LeftPanel.tsx
src/components/media-pool/: MediaPool.tsx
src/components/preview/: PreviewPanel.tsx
src/components/timeline/: ClipView.tsx  TimeRuler.tsx  TimelinePanel.tsx  TrackLane.tsx
src/constants/: dnd.ts  shortcuts.ts
src/hooks/: index.ts  use-keyboard-shortcuts.ts
src/stores/: index.ts  project-store.ts  ui-store.ts
src/styles/: global.css
src/types/: index.ts
(+1 files in other folders)
