[package]
name = "fc-export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
tokio = { version = "1", features = ["process", "io-util", "sync"] }
fc-ffmpeg = { path = "../fc-ffmpeg" }
